[project]
name = "mercor-cheating-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "nx-cugraph-cu13>=25.12.0",
    "pandera[polars]>=0.29.0",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "xgboost>=3.1.3",
]
